--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=barbearia-api
 
 #****** CONEXAO COM O BANCO ************
 
-spring.datasource.url=jdbc:mysql://localhost\\MYSQL:3306;databaseName=barbearia?useSSL=false&serverTimezone=UTC
-spring.datasource.username=kayo
-spring.datasource.password=!@##@!
+spring.datasource.url=jdbc:mysql://192.168.1.255\\MYSQL:3306;databaseName=barbearia?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=6590
 
 #****** DRIVER MYSQL *******************
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
