--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=barbearia-api
 
 #****** CONEXAO COM O BANCO ************
 
-spring.datasource.url=jdbc:mysql://192.168.1.255\\MYSQL:3306;databaseName=barbearia?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://192.168.1.4:3306/barbearia?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=6590
 
