--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=barbearia-api
 
 #****** CONEXAO COM O BANCO ************
 
-spring.datasource.url=jdbc:mysql://192.168.1.4:3306/barbearia?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost/barbearia?useSSL=false&serverTimezone=UTC
+spring.datasource.username=valentim
 spring.datasource.password=6590
 
 #****** DRIVER MYSQL *******************
