--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=barbearia-api
 #****** CONEXAO COM O BANCO ************
 
 spring.datasource.url=jdbc:mysql://localhost/barbearia?useSSL=false&serverTimezone=UTC
-spring.datasource.username=valentim
-spring.datasource.password=6590
+spring.datasource.username=root
+spring.datasource.password=Kayo123!
 
 #****** DRIVER MYSQL *******************
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
