--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=barbearia-api
 
 spring.datasource.url=jdbc:mysql://localhost/barbearia?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Kayo123!
+spring.datasource.password=!@##@!
 
 #****** DRIVER MYSQL *******************
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
