--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=barbearia-api
 
 spring.datasource.url=jdbc:mysql://localhost/barbearia?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1
 
 
 #****** DRIVER MYSQL *******************
